Re-fix for project z-index

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -45,7 +45,7 @@
     height: 100vh;
     text-align: center;
     background: rgba(v.$color-primary,.9);
-    z-index: 1000;
+    z-index: 10;
     opacity: 0;
     padding: 50px 0;
     pointer-events: none;
