--- a/styles/style.css
+++ b/styles/style.css
@@ -383,7 +383,7 @@ a:visited {
   height: 100vh;
   text-align: center;
   background: rgba(21, 21, 21, 0.9);
-  z-index: 1000;
+  z-index: 10;
   opacity: 0;
   padding: 50px 0;
   pointer-events: none;
@@ -664,7 +664,7 @@ a:visited {
   opacity: 0;
   -webkit-transition: opacity 0.3s ease;
   transition: opacity 0.3s ease;
-  z-index: 100;
+  z-index: 9;
   text-align: center;
 }
 .links a {
